Efecto PlaceHolder en todo el formulario y mas configuraciones de diseño con nuevas instancias.

--- a/FormPrincipal/FormPrincipal.csproj
+++ b/FormPrincipal/FormPrincipal.csproj
@@ -23,4 +23,8 @@
     </EmbeddedResource>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="FormsButton\Reporte\FormHijos\" />
+  </ItemGroup>
+
 </Project>
